--- a/modulo3/ex001/fundo001.html
+++ b/modulo3/ex001/fundo001.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="square"></div>
-    <div class="square"></div>
-    <div class="square"></div>
+    <div class="square" id="s1"></div>
+    <div class="square" id="s2"></div>
+    <div class="square" id="s3"></div>
   </body>
 </html>
