--- a/modulo4/ex003/mq003/index.html
+++ b/modulo4/ex003/mq003/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    <header class="hamburguer">
+    <header>
       <h1>Meu Site</h1>
       <span
         id="burguer"
